# adhdtoolbox

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
.playwright-mcp/: page-2026-06-06T16-33-36-737Z.yml  page-2026-06-06T16-34-55-671Z.yml  page-2026-06-06T16-35-49-953Z.yml  page-2026-06-06T16-36-56-585Z.yml  page-2026-06-06T16-37-16-455Z.yml
adhdtoolbox-phases/: 00-overview.md  01-scaffold.md  02-ui-shell-catppuccin.md  03-focus-timer.md  04-tiny-todo-task-timers.md  05-time-tracker.md  06-browser-tts.md  07-tts-backend-skeleton.md  08-moss-tts-nano-integration.md  09-polish-accessibility.md  10-final-validation-docs.md
apps/web/: .env.example  index.html  package.json  tsconfig.node.json  vite.config.ts
apps/web/src/: App.tsx  browserStorage.ts  main.tsx  styles.css  time.ts  tools.ts  vite-env.d.ts
apps/web/src/components/: AppShell.tsx  Button.tsx  FocusTimerPanel.tsx  Header.tsx  Input.tsx  PrivacyNote.tsx  ReadAloudPanel.tsx  Textarea.tsx  TimeTrackerPanel.tsx  TinyTodoPanel.tsx
apps/web/src/hooks/: timerAudio.ts  useCountdown.ts  useCountdownTimer.ts  useTimeTracker.ts  useTinyTodo.ts
docker/nginx/: web.conf
docs/: README.md  design-system.md  tts-backend.md
scripts/: dev.sh
services/tts/: .env.example  Dockerfile  README.md  pyproject.toml
services/tts/app/: __init__.py  main.py  moss_cli_wrapper.py
