[project]
name = "adhdtoolbox-tts"
version = "0.1.0"
description = "Local FastAPI TTS service for ADHDToolbox"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "moss-tts-nano @ git+https://github.com/OpenMOSS/MOSS-TTS-Nano.git",
  "python-dotenv>=1.0.1",
  "uvicorn[standard]>=0.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
